[package]
name = "scythe_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
scythe-parser = { path = "./src/scythe-parser" }
# llvm-ir = { version = "0.8.1", features = ["llvm-13"] }
# llvm-sys = "130.0.3"
# llvmenv = "0.3.2"

[workspace]
members = [
  "./src/scythe-parser",
]